# osiris

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/common/: DecodeText.tsx  HoloPanel.tsx  StatSegments.tsx
src/components/creation/: StepIdentity.tsx  StepPath.tsx  StepStats.tsx  StepStory.tsx  StepWorld.tsx
src/components/game/: Codex.tsx  InputBar.tsx  NarrativeLog.tsx  NotificationCenter.tsx  TitleCard.tsx  Typewriter.tsx  WorldBar.tsx
src/components/game/panels/: AtlasPanel.tsx  ChroniclePanel.tsx  InventoryPanel.tsx  PhonePanel.tsx  QuestsPanel.tsx  RelationsPanel.tsx  StatusPanel.tsx
src/components/vfx/: ParticleField.tsx  SceneFlash.tsx
src/data/: archetypes.ts  sounds.ts  themes.ts
src/lib/: anthropic.ts  audio.ts  avatar.ts  config.ts  createGame.ts  memory.ts  migrate.ts  persistence.ts  progression.ts  prompts.ts  stateProtocol.ts  style.ts  themeVars.ts  world.ts
src/screens/: CharacterCreation.tsx  Game.tsx  Home.tsx  Settings.tsx
src/store/: gameStore.ts
src/styles/: theme.css
src/types/: game.ts
