[package]
name = "oniria"
version = "0.1.0"
description = "ONIRIA — jeu de rôle textuel narratif piloté par IA (desktop local)."
authors = ["tacktiikz-spec"]
edition = "2021"
rust-version = "1.77.2"

[lib]
# Le nom de la lib ; `_lib` évite un conflit de nom sous Windows.
name = "oniria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Utilisé par Tauri pour la compilation custom-protocol en production.
custom-protocol = ["tauri/custom-protocol"]
